# cngx

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  ROADMAP.md  SECURITY.md  action.yml  demo_contract.yaml  mkdocs.yml  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  cngx-check.yml  cogscope-check.yml  example-agent-gate.yml  publish.yml  release-binaries.yml  tracker-deploy.yml  tracker-probe.yml
.venv-pyinstaller/: pyvenv.cfg
.venv-pyinstaller/Scripts/: activate  activate.bat
cngx/: __init__.py
cngx/capture/: trace_builder.py  tracer.py
cngx/capture/adapters/: gemini.py
cngx/cli/: check_cmd.py  demo.py  enforce.py  gate.py  main.py  quickstart_cmd.py  submit_cmd.py  verify_cmd.py  watch.py  wrap.py
cngx/enforcement/: evidence.py  gate.py  github_action.py
cngx/observability/: metrics.py
cngx/server/: app.py
cngx/storage/: backend.py  database.py
cngx/system_demo/: pipeline.py  runner.py  scenarios.py
cngx/verify/: __init__.py  claims.py  parsers.py  runner.py  stats.py  verdict.py
cogscope/: __init__.py  __main__.py
cogscope/calibration/: __init__.py  confidence.py  profiles.py
cogscope/capture/: tracer.py
cogscope/capture/adapters/: base.py  claude.py  gemini.py  mock.py  openai.py
cogscope/cli/: capture.py  check_cmd.py  demo.py  diff.py  gate.py  main.py  quickstart_cmd.py  report_cmd.py  submit_cmd.py  watch.py
cogscope/contracts/: __init__.py  schema.py
cogscope/core/: config.py  exceptions.py  models.py
cogscope/diff/: engine.py
cogscope/drift/: __init__.py  detector.py  scoring.py  trajectory.py
cogscope/enforcement/: __init__.py  gate.py  github_action.py
cogscope/fingerprint/: __init__.py  extractor.py  normalizer.py
cogscope/observability/: __init__.py  logging.py  metrics.py
cogscope/providers/: __init__.py  base.py  rate_limiter.py  retry.py
cogscope/proxy/: __init__.py  analysis.py  app.py  config.py  events.py  server.py
cogscope/security/: __init__.py  regex_sandbox.py
cogscope/server/: app.py
cogscope/storage/: backend.py  database.py
cogscope/system_demo/: __init__.py  runner.py
cogscope/tui/: __init__.py  alerts.py  dashboard.py
cogscope/versioning/: pinning.py  store.py
contracts/: code_correctness.yaml  math_correctness.yaml  research_reasoning.yaml
docs/: contributing.md  faq.md  index.md  roadmap.md
docs/cli/: reference.md
docs/concepts/: drift.md  fingerprinting.md  policies.md  positioning.md  sessions.md
docs/getting-started/: installation.md  quickstart.md
docs/guides/: badge.md  coding-agent-recipes.md  gate-coding-agent.md  github-action.md  proxy-and-privacy.md  public-drift-log.md  wrap-agent.md
examples/: basic_usage.py  complete_demo.py  demo_contracts.py  drift_detection.py  killer_demo.py  regression_suite_real.yaml  regression_testing.py  streaming_capture.py  system_demo.py
examples/contracts/: basic_reasoning.yaml  coding_agent_verification.yaml  coding_agent_verification_lenient.yaml  math_reasoning.yaml  strict_verification.yaml
examples/contracts/legacy/: code_correctness.yaml  math_correctness.yaml  research_reasoning.yaml
infra/tracker_submit/: __init__.py  stack.py
infra/tracker_submit/lambda_handler/: handler.py
packaging/pyinstaller/: README.md  cngx.spec  cogscope.spec
scripts/: launch_aws_security_probe.py  launch_live_probe.py  test_github_action_local.py
scripts/demo/: README.md  record_tracker.py
scripts/real_world_validation/: .gitignore  run_all.py
tests/: __init__.py  conftest.py  test_contracts.py  test_phase2_validation.py  test_system_demo.py
tests/brutal/: __init__.py  conftest.py  test_cli_integration.py  test_contract_enforcement.py  test_drift_statistics.py  test_fingerprint_truth.py  test_full_pipeline.py  test_offline_coding_agent.py  test_provider_security.py
tests/brutal/fixtures/: contract_fixtures.py  sample_outputs.py
tests/enterprise/: __init__.py  conftest.py  test_08_deployment_readiness.py  test_10_error_recovery.py  test_12_server_api.py  test_13_calibration.py
tests/fixtures/: offline_good_output.txt
tests/fixtures/agent_outputs/: unverified_patch.txt  verified_fix.txt
tests/integration/: __init__.py  test_full_pipeline.py  test_verify_cli.py
tests/unit/: __init__.py  test_calibration.py  test_check_cli.py  test_check_offline.py  test_coding_agent_policies.py  test_contracts.py  test_diff.py  test_drift.py  test_drift_alerting.py  test_enforcement.py  test_evidence_file.py  test_fabricated_verification.py  test_fingerprint.py  test_github_action.py  test_metrics.py  test_offline_check.py  test_providers.py  test_proxy.py  test_proxy_anthropic.py  test_security.py  test_session.py  test_session_db.py  test_submit_privacy.py  test_trajectory.py  test_verify_claims.py  test_verify_parsers.py  test_verify_stats.py  test_verify_verdict.py  test_watch_cli.py
tracker/: README.md  build.py
tracker/data/: annotations.json
tracker/data/community/: e51bd88f-c41a-4317-8497-dfc8084448c4.json
tracker/data/samples/: sample-claude-sonnet.json  sample-gemini-flash.json  sample-gpt-4o-mini.json
tracker/static/: site.css
