[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cogscope"
version = "0.1.0"
description = "Cogscope — local LLM reasoning fingerprinting, drift detection, and policy checks."
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Cogscope Contributors" }
]
keywords = [
    "llm",
    "reasoning",
    "drift-detection",
    "behavior-contracts",
    "behavioral-fingerprinting",
    "ai-safety",
    "model-evaluation",
    "local-first",
    "policy-check",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: Software Development :: Testing",
    "Typing :: Typed",
]
dependencies = [
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "typer>=0.9.0",
    "rich>=13.0.0",
    "httpx>=0.27.0",
    "openai>=1.0.0",
    "duckdb>=0.9.0",
    "python-dotenv>=1.0.0",
    "numpy>=1.24.0",
    "scipy>=1.11.0",
    "fastapi>=0.115.0",
    "uvicorn>=0.24.0",
    "starlette>=0.37.0",
    "pyyaml>=6.0.0",
    "jinja2>=3.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.6.0",
    "httpx[http2]>=0.25.0",
    "pre-commit>=3.5.0",
    "safety>=2.3.0",
    "bandit>=1.7.0",
    "build>=1.0.0",
    "twine>=5.0.0",
]
gemini = [
    "google-genai>=1.0.0",
]
claude = [
    "anthropic>=0.30.0",
]
cloud = [
    "gunicorn>=21.2.0",
]
postgres = [
    "psycopg2-binary>=2.9.9",
    "sqlalchemy>=2.0.20",
]
platform = [
    "cogscope[postgres]",
    "sqlalchemy>=2.0.20",
    "psycopg2-binary>=2.9.9",
    "redis>=5.0.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.24.0",
    "pyjwt>=2.8.0",
    "python-multipart>=0.0.6",
]
docs = [
    "mkdocs>=1.5.0",
    "mkdocs-material>=9.4.0",
    "mkdocstrings[python]>=0.24.0",
]
all = [
    "cogscope[gemini,claude,cloud]",
]

[project.scripts]
cogscope = "cogscope.cli.main:app"

[project.urls]
Homepage = "https://github.com/aadi-joshi/cogscope"
Repository = "https://github.com/aadi-joshi/cogscope"
Documentation = "https://github.com/aadi-joshi/cogscope#readme"
"Bug Tracker" = "https://github.com/aadi-joshi/cogscope/issues"
Changelog = "https://github.com/aadi-joshi/cogscope/blob/main/CHANGELOG.md"

[tool.hatch.build.targets.wheel]
packages = ["cogscope"]

[tool.hatch.build.targets.sdist]
exclude = [
  "/tracker",
  "/tests",
  "/.github",
  "/docs",
  "/site",
  "/dist",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-v --tb=short"

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.ruff]
line-length = 100
target-version = "py310"
exclude = ["examples/"]

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = [
    "E501",   # line too long — handled by formatter
    "E741",   # ambiguous variable name
    "F401",   # unused imports — too many false positives in __init__.py re-exports
    "W293",   # blank line with whitespace
    "W291",   # trailing whitespace
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401", "F811"]
"tests/*" = ["F811"]
"cogscope/server/app.py" = ["E402"]

[tool.ruff.lint.isort]
known-first-party = ["cogscope"]

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
check_untyped_defs = false
disallow_untyped_defs = false
warn_return_any = false
warn_unused_configs = true
exclude = ["examples/", "tests/"]
